@@ -16,6 +16,7 @@ The following bugs have been fixed in the 1.4.3 release.
 <no id>	add starttls support to POP3
 <no id>	fix deadlock in IMAP IDLE support
 <no id>	add mail.transport.protocol.<address-type> property
+<no id>	fail POP3Folder.open if STAT command fails
 
 
 		  CHANGES IN THE 1.4.2 RELEASE
